# MyShelfie

./: .gitignore  README.md  pyproject.toml
src/server/model/: Entities.py
tests/: test_entities.py
